# ChangeLog for dev-python/pyzor
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyzor/ChangeLog,v 1.68 2014/05/20 09:39:50 idella4 Exp $

*pyzor-0.7.0 (20 May 2014)

  20 May 2014; Ian Delaney <idella4@gentoo.org> +pyzor-0.7.0.ebuild,
  metadata.xml:
  bump; virtual re-write, keywords (reluctantly) dropped subsequent to new deps

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> pyzor-0.5.0-r2.ebuild:
  Stable for alpha, wrt bug #498050

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> pyzor-0.5.0-r2.ebuild:
  Stable for sparc, wrt bug #498050

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> pyzor-0.5.0-r2.ebuild:
  Stable for x86, wrt bug #498050

  20 Jan 2014; Agostino Sarubbo <ago@gentoo.org> pyzor-0.5.0-r2.ebuild:
  Stable for ppc, wrt bug #498050

  19 Jan 2014; Agostino Sarubbo <ago@gentoo.org> pyzor-0.5.0-r2.ebuild:
  Stable for ppc64, wrt bug #498050

  18 Jan 2014; Pacho Ramos <pacho@gentoo.org> pyzor-0.5.0-r2.ebuild:
  amd64 stable, bug #498050

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> pyzor-0.5.0-r2.ebuild:
  Stable for ia64, wrt bug #498050

  14 Jan 2014; Jeroen Roovers <jer@gentoo.org> pyzor-0.5.0-r2.ebuild:
  Stable for HPPA (bug #498050).

*pyzor-0.5.0-r2 (16 Oct 2013)

  16 Oct 2013; Hanno Boeck <hanno@gentoo.org> +pyzor-0.5.0-r2.ebuild,
  +files/pyzor-0.5.0-python26_warnings.patch:
  Fix python 2.6/2.7 warnings, patch from Debian/Ubuntu.

  27 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pyzor-0.5.0-r1.ebuild:
  Set PYTHON_DEPEND, PYTHON_USE_WITH and PYTHON_USE_WITH_OPT.

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org> pyzor-0.5.0-r1.ebuild:
  alpha/ia64/sparc stable wrt #293849

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org> pyzor-0.5.0-r1.ebuild:
  Marked ppc/ppc64 stable for bug #293849.

  24 Nov 2009; Jeroen Roovers <jer@gentoo.org> pyzor-0.5.0-r1.ebuild:
  Stable for HPPA (bug #293849).
