@@ -7,13 +7,13 @@ DIST pyzor-0.5.0.tar.bz2 40654 SHA256 2bf3df9e916861063a73f7b46cb8b27bac6f661fce
 DIST pyzor-0.7.0.tar.bz2 78555 SHA256 6d9ca62bd4aa9a0210adb9d4c8ff2b38bb2cd051f1517ce29e88d7fbe4b1026d SHA512 40026fc0276b4cf60fe7dfe30e2d4d4d1f220cf860b8aaef9d983e632a7d87bc8deb3430ded7520a69269ef56550117735a6e3c8d046d4cad7066f8597ead3cd WHIRLPOOL dd8466477e38362fa0a64ec66822ae3820c22f8ae13b40002145b1e688d17c17edfb800eb44679ff961e74b667daa43ef09d8eadb92f683c9e73c9b00fad23b9
 EBUILD pyzor-0.5.0-r1.ebuild 1420 SHA256 dea4abaec1dfc420dc3cf3ab8211b4ac4512353840c2053ca1bd12a2cdebe0cf SHA512 bb65e8b7bf2da756d3f8baf98b99def7f8680d71f3185c228fa6547a5ffefb70f02f773eb643dac4e04f10ec3f2b7474c5892228c5354197f1211fcb9467ef9d WHIRLPOOL a3a2b0e1cc2666cf4680a9b26ae37f294010698be6dc58d561a81d71a3c8216976da18f48d7845a63feaf21c014a9d61e0595dd04b225feb40de8d42b0caffe1
 EBUILD pyzor-0.5.0-r2.ebuild 1466 SHA256 314181bd1a7ef716a9d020276791f9ac7b7d4b82c58b98b944c810431667b8a3 SHA512 200a79f63694c264c778e41e0215c93a3de8bcfef4502151a53e09969511e62114c8fb28e7208a98f33326d51596bb17970aece01e40be4014fe9709cd9937b1 WHIRLPOOL d426d6994fd58bd3d46e89f8be6991ccdd00a5a74d41b8e9461371d479ef4eb8dd1326e0b3a6eeb5a87afd878a4313b3e2edbe8df8502df2e25b4c1eee34aa32
-EBUILD pyzor-0.7.0.ebuild 1659 SHA256 7df045fc08f1573794e8927e5e3efe886a087ea40d3a83afb9262ecf1f22d3fc SHA512 d7872c84defdab6f37d51fd159e41d9cfbb2d5451d93819640756977b88d36ae12ad4335652c642db302e1e6c4dbd890093361f03fc2ce85ac8bebc6bb93db24 WHIRLPOOL c0a331b9f9fe8e3a34c517f5ef13d9d569561cb90335fd84487de7892e268b1d40bdd24a4f0cec1b103f7c7b7432088af4f6d6921576725d70dfa07619bc8ae0
-MISC ChangeLog 7979 SHA256 150b157154e07eb09ed946b24c06463d7ed3f0d37f305e715d15062bbc7a3cb7 SHA512 39655ed33a7b33a49b95393807b466b920c43d621009cf698ff265e7084cdb99f39673ddbea8dbc4f1a1ec8edcf3e32dbb9fe5e6e3f97a5715772b0f63f07b03 WHIRLPOOL 2258f362b15903e35ac72b054bed41d51529ae5e41e1917ee9ed5daff35e7751474524f90ce341bc6e456e84e121bdac56ae6971d800a597c2d477210ce85a49
+EBUILD pyzor-0.7.0.ebuild 1661 SHA256 64839d7ad3ea734b27f50624859bba81b0281df4051b06a1ffcd76684a65f498 SHA512 085e4c02e2466da32bd9c4e38f5867e189323986459d6d0d2c88a19e01906583afbc23171765aa6b3965b0e225fdb0c0bdcecbc9c1845d785a3d4cce94cad871 WHIRLPOOL d6299418ed479d9cbd9d39525b2473832c70dfafe8a007e1aa47eb5f94b033a4428360a2ca9536365fc5904c127dee101980f66b0d1ad4ec35d3db37404604fd
+MISC ChangeLog 8073 SHA256 1b0da9aaf62864945a25cd59b77bf3ace4bb904521d2bcd5e69896fc0c4780db SHA512 32b5582e44c46babb2b12fe221535bd308664b26ae3382d8243c47e08a6d8129410f6989f2cb15ebb372a913bf8937506a284d705d3fdd4812ef2f4a5529ea43 WHIRLPOOL 27a3e345ef4121407c3a6f26b55d17ab51e2cff5c9e394d8e96367cf5c537721e0b938171e2ef61d7274669780a583c49ccb50e6192acd734fb158e988356ed9
 MISC metadata.xml 324 SHA256 8de313086918b6dc70288dc229a81c3f483407260411eb8914840a715d38d4a7 SHA512 9eb74e02826abb39ba4b40b2a382a852687159df86d1ee5a66976a7fe508edc7ba435164790cb71d3b001c3e5a41df0134fb0d9cfa6823685525a6d637f5ee5d WHIRLPOOL f7c0102cf5ac00d832e6d7af1a70b17494b35611b1717c08851571a5068fe58d6ba4deba0341d73870622ed8fd6d2228b1aac5a7aa2ea3ecb20edf27387d87aa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlN7IRgACgkQso7CE7gHKw3G5QCghO1TwNcSQtcKG4flg1zRltne
-1/4An3DPu75lhfv+gacb3Tn4Qzhid5p6
-=zR2y
+iEYEAREIAAYFAlN7PE4ACgkQVWmRsqeSphMMJgCfXD3ZJFG4I2p84nb3oCcFHRYj
+Sd0AnjR8NUOsPU3AwDKDER6K4yR2+fdV
+=WGN5
 -----END PGP SIGNATURE-----
