@@ -12,13 +12,13 @@ EBUILD redis-py-2.7.2-r1.ebuild 1730 SHA256 14f651a2e28b6f0d3ed0e40c9160c695b553
 EBUILD redis-py-2.7.4.ebuild 1727 SHA256 6bdd23a2d0fbe9523e426e126c32b80149b104f5b88fb02eb9560384d25448ed SHA512 6ee8391e276a75fb4837dcf8381861021bda0dde1d2ff4e7cb9c77aa28896f2dd97b8f051c5781cf568fc8ed54c6b45a38e88b9e02b67d8ebd1cc24c3b306926 WHIRLPOOL 6a2fb20d65ac84fb7cf9b8ec5c41ea601132b898fc3571af22b91ee53dda40ede1f570bf11f644502e164c29687279fb1baeae0b53aa17c28c42709e00cdaacc
 EBUILD redis-py-2.7.5.ebuild 1729 SHA256 9abddd47f5dc5e88c79ca0619b87ba612c528b9a4002d45c6e7f204cdd7c74a7 SHA512 81c14b4ae4cf3382c67bac196f5444d4dd0014fd532b7e52ebc9b89cfb216ba24afd667a798af5ccdd0872227fff1a893b336ed5f2092b6d4f66fe1faf053d4e WHIRLPOOL 311c41699ea12bf1b244879731f8cb4c7a08fedb31f9714be5a3a201b392e00a2f17e4011c226471b3e86c220625a3130f24688d06cf5f7e7c82a9b689209166
 EBUILD redis-py-2.7.6.ebuild 1729 SHA256 2dfe42c95e8bfb4da7b6967ee70dd15cfee3c51737c33f5d6c3363a0c11763b3 SHA512 1fc9d84a4d452717be41ebd6d0eda016d863b99f1d313a26859158fbb59bcc398770ebc09fee51c00ed263aa7fac37bcdade42b39983c28271e26141f2657cff WHIRLPOOL 83c53a84902af508de47b5e92d99655149b2045c56d77fe32f20f1c48b14b9e2416f6b82567b91b14b26cff86e9531699e9c6a173a0e8adeeb4c78637a865476
-EBUILD redis-py-2.9.1.ebuild 1712 SHA256 20f29559b44396bf018076e72ed736319d30a2ac4ddc63d9a200f01193162d3f SHA512 9ee1e10b9f90bfc20d9946e05a88f21d6de50c9071239920578fad5d3460195092f38a5b1396a2c82dbde8206b2626847c531694730d187932408b8cc8364d3f WHIRLPOOL cb1a6a1580ee104ddebd293a848857f56d3ef6579c06b0e3d0c539f14ae110d472fa0c19d5b24692948ad4c440321c50c3463689481fc6b3566c876d1db17c60
-MISC ChangeLog 6102 SHA256 1e1f7f4fe513c1259c3463ab698d74cd3d26ba9ddb8f2d2ccea3bb848218338b SHA512 33ef57b01328beeef6c0eee4714b5fb969cd7e8909ad5d9f8f43dbcbfeb593792abf3c138035408c05d7569ccfda6e7040d665cff86cbd4d65243f1634f183dd WHIRLPOOL 7c60632416d1ae6637fdc6270947f31b1eb8823cf9a258a3e45b876d37a0198d473751b628166cf1ba8cf5ff39bbcc36f91529c2b13062e8f12d68af685ae321
+EBUILD redis-py-2.9.1.ebuild 1714 SHA256 576482b754ed421bf8114c6c130ffe355e9ebadf2435fcf854e83fa656242b7c SHA512 c6962527d265ba233e014ae87e0d474fbad947e6468dd9a088e5e3f8ff6b7593e2718c3a462a65b400cd7445b4e987bda36370fd3e2f5f8e8da959547d2994dd WHIRLPOOL d7fef43a3585c55fff3026c98009e94398043e70efa3233c1f93105e0731f501ca8632afb2849432ce81980756ce376f77fa79691c39270d972aa94cadf9866e
+MISC ChangeLog 6199 SHA256 fe6b1965441186037467d019996b4e0d90dc265a7d898643100f74d45d540b77 SHA512 c9c0bbe8cac4327ceefdf2b809634ea12e1d610d5c53e773db79b3f20a4e7f56ef967ad507e09da68f3cc542d0885e49c19dc7aec82eb2c2e7b3321f7da898b6 WHIRLPOOL e0130eed6c4dfe014c0e01fa453ee5b0bc2767cfc249271feab541432e7bafbbd572c13316dbc843c2bf6c5f58288cf3331b31a38495562fc7b31105eea1f084
 MISC metadata.xml 233 SHA256 4bd1b6f493a0e22eed218abfb9305447fb0b91b68b97177e494587202690d474 SHA512 3667747aa121e58c82f1c6e1f617425c105a23b0c448aafff82cea74074cb6d309502c4cc5892c3daa6925e2c364a88d1f0a027333bbbaf9b35a764de17e9840 WHIRLPOOL 7faf147b4036cb7af89348d628cf7a4ed6e2cd2757868c53438af98c3a967505776c9fd4ef5372cd48b40fcc68cc33bc18e3001f0413cfe58ee9524fe56eb9aa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlN7DfEACgkQso7CE7gHKw1h9gCgnoYtJ81Bd2MRK9clG5Cu9wY/
-7+oAn1hn3kq/ZrwUKivUnuFBOJ7TAFtp
-=WVpO
+iEYEAREIAAYFAlN7PCEACgkQVWmRsqeSphNj+wCcCHuiWjfoFZtXNflS5sCAAUz3
+NWAAn1oXKi21QymOob8/KpyDjnSgpIuY
+=J5zV
 -----END PGP SIGNATURE-----
