@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyzor
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyzor/ChangeLog,v 1.68 2014/05/20 09:39:50 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyzor/ChangeLog,v 1.69 2014/05/20 11:28:12 jer Exp $
+
+  20 May 2014; Jeroen Roovers <jer@gentoo.org> pyzor-0.7.0.ebuild:
+  Marked ~hppa (bug #510626).
 
 *pyzor-0.7.0 (20 May 2014)
 
